package model;

public enum SIGNAL {
	HIGH,
	LOW
}
